minor changes to see if fixed background will stretch on mobile

--- a/css/override.css
+++ b/css/override.css
@@ -42,6 +42,11 @@
 
 .banner-parallax {
 	background-image: url('../img/bg.jpg');
+	min-height: 100%;
+	width: 100%;
+	height: auto;
+	top: 0;
+	left: 0;
 }
 
 a.btn-bordered {
